GNOME Bugzilla – Bug 640607
appsink never sends "new-buffer-list" signal
Last modified: 2011-01-31 14:33:25 UTC
Latest git version of appsink has : gst-plugins-base/gst-libs/gst/app/gstappsink.c line 780 : if (is_list) { if (priv->callbacks.new_buffer_list) priv->callbacks.new_buffer_list (appsink, priv->user_data); } else { if (priv->callbacks.new_buffer) priv->callbacks.new_buffer (appsink, priv->user_data); else if (emit) g_signal_emit (appsink, gst_app_sink_signals[SIGNAL_NEW_BUFFER], 0); } doing a grep shows that the "new-buffer-list" signal is created in the class_init but it's never used anywhere, it seems clear that there's a line missing there. Thanks.
Created attachment 179348 [details] [review] Send "new-buffer-list" signal I check out gstappsink.c and make this signal to be sent. This patch may fix this bug.
commit 71dec68cbab5f72f4cd7d884903cfdb19e27fda6 Author: Cai Yuanqing <Yuanqing.Cai@tieto.com> Date: Wed Jan 26 10:32:32 2011 +0800 appsink: send new-buffer-list signal Send new-buffer-list signal when emit-signals is TRUE https://bugzilla.gnome.org/show_bug.cgi?id=640607